[package]
name = "graphsql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Async
tokio = { version = "1.13.0", features = ["full"] }

# Serialization
serde_json = "1.0.68"

# Web
warp = "0.3.1"